<resources>
    <string name="app_name">ProjectAndroid</string>
    <string name="registration_form">Registration Form</string>
    <string name="employee_first_name">Employee First Name</string>
    <string name="first_name">first name</string>
    <string name="employee_last_name">Employee Last Name</string>
    <string name="last_name">last name</string>
    <string name="employee_birth_year">Employee Birth Year</string>
    <string name="birth_year">birth year</string>
    <string name="monthly_salary">Monthly Salary</string>
    <string name="occupation_rate">Occupation Rate</string>
    <string name="occupation_rate_hint">occupation rate</string>
    <string name="monthly_salary_hint">monthly salary</string>
    <string name="employee_id">Employee ID</string>
    <string name="employee_type">Employee Type</string>
    <string name="number">number</string>
    <string name="vehicle">Vehicle</string>
    <string name="car">Car</string>
    <string name="motorbike">Motorbike</string>
    <string name="side_car">Side Car</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="car_type">Car Type</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="model">Model</string>
    <string name="plate_number">Plate Number</string>
    <string name="plate_number_hint">plate number</string>
    <string name="vehicle_color">Vehicle Color</string>
    <string name="employee_id_hint">employee id</string>
    <string name="register">Register</string>
    <string name="add">ADD</string>
    <string-array name="employee_type_array">
        <item>Choose a type</item>
        <item>Manager</item>
        <item>Tester</item>
        <item>Programmer</item>
    </string-array>
</resources>
