<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".RegistrationActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/registration_form"
            android:textAlignment="center"
            android:id="@+id/tvHead"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/employee_first_name" />

                <EditText
                    android:id="@+id/etFname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:hint="@string/first_name"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/employee_last_name" />

                <EditText
                    android:id="@+id/etLname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:hint="@string/last_name"
                    android:inputType="text" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/employee_birth_year" />

                <EditText
                    android:id="@+id/etBirthYear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:hint="@string/birth_year"
                    android:inputType="number" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/monthly_salary" />

                <EditText
                    android:id="@+id/etMonthlySalary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:hint="@string/monthly_salary_hint"
                    android:inputType="number" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/occupation_rate" />

                <EditText
                    android:id="@+id/etOccupationRate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:hint="@string/occupation_rate_hint"
                    android:inputType="number"
                    android:text="100" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/employee_id" />

                <EditText
                    android:id="@+id/etID"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:hint="@string/employee_id_hint"
                    android:inputType="numberDecimal" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/employee_type" />

                <Spinner
                    android:id="@+id/spinnerType"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.6"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow
                android:id="@+id/trCharacter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tvCharacter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4" />

                <EditText
                    android:id="@+id/etCharacter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:hint="@string/number"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/vehicle" />

                <RadioGroup
                    android:id="@+id/rgVehicle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbCar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/car" />

                    <RadioButton
                        android:id="@+id/rbBike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/motorbike" />
                </RadioGroup>
            </TableRow>

            <TableRow
                android:id="@+id/trSideCar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/side_car" />

                <RadioGroup
                    android:id="@+id/rgSideCar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbSideCarYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yes" />

                    <RadioButton
                        android:id="@+id/rbSideCarNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no" />
                </RadioGroup>
            </TableRow>

            <TableRow
                android:id="@+id/trCarType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/car_type" />

                <EditText
                    android:id="@+id/etCarType"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:hint="@string/car_type"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/vehicle_model" />

                <EditText
                    android:id="@+id/etVehicleModel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:hint="@string/model"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/plate_number" />

                <EditText
                    android:id="@+id/etPlateNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:hint="@string/plate_number_hint"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/vehicle_color" />

                <Spinner
                    android:id="@+id/spinnerColor"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.6"
                    android:hint="@string/employee_id_hint"
                    android:inputType="numberDecimal" />
            </TableRow>

        </TableLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/btnAction"
            android:onClick="registerEmployee"
            android:text="@string/register" />
    </LinearLayout>
</ScrollView>
